# edamame_cli

./: .cursorrules  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  install.sh
.cursor/rules/: project.mdc
.github/workflows/: format.yml  release_apks.yml  release_debs.yml  release_deploy_apks.yml  release_deploy_debs.yml  release_deploy_others.yml  release_others.yml  test_all.yml  test_installers.yml
chocolatey/: edamame-cli.nuspec
chocolatey/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
completions/: _edamame_cli  edamame_cli.bash  edamame_cli.fish
homebrew/: edamame-cli.rb
src/: main.rs
