[package]
name = "edamame_cli"
version = "0.9.15"
edition = "2021"

[features]
health = ["edamame_core/health"]

[dependencies]

# Local copy in order to allow rapid development/debug
#edamame_core = { path = "../edamame_core", features = [ "standalone", "swiftrs" ] }
edamame_core = { git = "https://github.com/edamametechnologies/edamame_core", branch = "main", features = [ "standalone", "swiftrs" ] }

# Serde
serde_json = "1.0"

# Paste
paste = "1.0"

# Lazy static
lazy_static = "1.4.0"

# CLI
clap = "4.1.1"

# Encrypted env (weak)
envcrypt = "0.5.0"

[build-dependencies]

# Build metadata
vergen-gitcl = { version = "1.0.5", features = [ "build", "cargo", "rustc", "si" ] }
