[package]
name = "edamame_cli"
version = "0.9.83"
edition = "2021"

[features]
health = ["edamame_core/health"]

[dependencies]

# Local copy in order to allow rapid development/debug
#edamame_core = { path = "../edamame_core", features = [ "standalone", "swiftrs" ] }
edamame_core = { git = "https://github.com/edamametechnologies/edamame_core", branch = "main", features = [ "standalone", "swiftrs" ] }

# Serde
serde_json = "1.0"

# Paste
paste = "1.0"

# Lazy static
lazy_static = "1.4.0"

# CLI
clap = "4.1.1"
clap_complete = "4.5.1"

# Encrypted env (weak)
envcrypt = "0.5.0"

# Linux
[target.'cfg(any(target_os = "linux"))'.dependencies]
cargo-deb = "3.3.0"
# See cargo-deb crate for configuration: https://crates.io/crates/cargo-deb
[package.metadata.deb]
name = "edamame-cli"
extended-description = "EDAMAME CLI interface to EDAMAME Posture service"
maintainer = "EDAMAME Technologies"
copyright = "EDAMAME Technologies"
license-file = ["LICENSE", "0"]
maintainer-scripts = "debian/"
assets = [
    { source = "target/release/edamame_cli", dest = "usr/bin/edamame_cli", mode = "0755" },
    # Add completion files for different shells
    { source = "completions/edamame_cli.bash", dest = "usr/share/bash-completion/completions/edamame_cli", mode = "0644" },
    { source = "completions/edamame_cli.fish", dest = "usr/share/fish/vendor_completions.d/edamame_cli.fish", mode = "0644" },
    { source = "completions/_edamame_cli", dest = "usr/share/zsh/vendor-completions/_edamame_cli", mode = "0644" },
]

[build-dependencies]

# Local copy in order to allow rapid development/debug
#flodbadd = { path = "../flodbadd", features = [ "packetcapture", "asyncpacketcapture" ] }
flodbadd = { git = "https://github.com/edamametechnologies/flodbadd", branch = "main", features = [ "packetcapture", "asyncpacketcapture" ] }

# Build metadata
# Easier to generate completions with the cli once it's built
# clap_complete = "4.5.1"
vergen-gitcl = { version = "1.0.5", features = [ "build", "cargo", "rustc", "si" ] }
